--- a/SmartWalletFrontend/src/app/pages/signup/signup.component.html
+++ b/SmartWalletFrontend/src/app/pages/signup/signup.component.html
@@ -1,30 +1,7 @@
-<p-steps [model]="items" [readonly]="true"></p-steps>
-<div class="container-pai">
-    <img src="../../../assets/signup.jpg" alt="">
-    <div class="container card flex justify-content-center column">
-        <h2 style="text-align: center;">Criar uma conta</h2>
-        <p>Preencha os campos abaixo</p>
-        <form style="text-align: center;">
-            <span class="p-float-label p-input-icon-left">
-                <i class="pi pi-id-card"></i>
-                <input class="ng-invalid" ng-dirty pInputText id="fullname" />
-                <label for="fullname">Nome completo</label>
-            </span>
-            <span class="p-float-label p-input-icon-left">
-                <i class="pi pi-user"></i>
-                <input class="ng-invalid" ng-dirty pInputText id="username" />
-                <label for="username">Login</label>
-            </span>
-            <span class="p-float-label p-input-icon-left">
-                <i class="pi pi-lock"></i>
-                <input pInputText id="password" type="password" />
-                <label for="password">Crie uma senha</label>
-            </span>
-        </form>
-        <div style="text-align: center;" class="button">
-            <p-button (click)="goToHome()" label="Criar conta"></p-button>
-            <br><br>
-        </div>
-    </div>
+<div class="steps">
+    <p-steps [model]="items" [readonly]="false" [activeIndex]="activeIndex" (activeIndexChange)="onActiveIndexChange($event)"></p-steps>
 </div>
+
+
+<router-outlet></router-outlet>
 
