--- a/SmartWalletFrontend/src/app/pages/signup/confirmation/confirmation.component.html
+++ b/SmartWalletFrontend/src/app/pages/signup/confirmation/confirmation.component.html
@@ -1,1 +1,25 @@
-<p>confirmation works!</p>
+<div class="container-pai">
+    <div style="width: 500px;" *ngIf="!imagemCarregada">
+        <p-progressSpinner></p-progressSpinner>
+    </div>
+    <img (load)="onImageLoad()" src="../../../../assets/confirmation.jpg" alt="">
+    <div class="container card flex justify-content-center column">
+        <h2 style="text-align: center;">Quase lá!</h2>
+        <p>Dentro de instantes você receberá um código de confirmação via SMS, assim que receber digite o código abaixo:</p>
+        <form style="text-align: center;">
+            
+            <span style="margin-bottom: 1.6rem; margin-top: 1.5rem" class="p-float-label p-input-icon-right">
+                <input style="font-size: 2rem; width: 100%;" class="ng-invalid" ng-dirty pInputText id="confirmation-code" />
+                <label for="confirmation-code">Código de confirmação</label>
+                <i class="pi pi-check-circle"></i>
+            </span>
+        </form>
+
+        <p-button label="Não recebi meu código." [text]="true"></p-button>
+        <div style="text-align: center; display: flex; justify-content: space-evenly; margin-top: 1rem;" class="button">
+            <p-button (click)="routerLink('signup/create-password')" icon="pi pi-arrow-left" iconPos="left" label="Voltar"></p-button>
+            <p-button severity="success" (click)="routerLink('signup/confirmation')" icon="pi pi-check-circle" iconPos="right" label="Criar conta"></p-button>
+        </div>
+    </div>
+</div>
+
