--- a/SmartWalletFrontend/src/app/pages/signup/create-password/create-password.component.html
+++ b/SmartWalletFrontend/src/app/pages/signup/create-password/create-password.component.html
@@ -1,1 +1,44 @@
-<p>create-password works!</p>
+<div class="container-pai">
+    <div style="width: 500px;" *ngIf="!imagemCarregada">
+        <p-progressSpinner></p-progressSpinner>
+    </div>
+    <img (load)="onImageLoad()" src="../../../../assets/create-password.jpg" alt="">
+    <div class="container card flex justify-content-center column">
+        <h2 style="text-align: center;">Crie sua senha</h2>
+        <p>Defina uma senha forte</p>
+        <form style="text-align: center;">
+            <span class="p-float-label">
+                <p-password [weakLabel]="'Fraca'" [mediumLabel]="'Média'" [strongLabel]="'Forte'" [promptLabel]="'Digite sua senha'" [toggleMask]="true">
+                    <ng-template pTemplate="header">
+                        <h6>Crie sua senha</h6>
+                    </ng-template>
+                    <ng-template pTemplate="footer">
+                        <p-divider></p-divider>
+                        <p class="mt-2">Requisitos</p>
+                        <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5; text-align: left;">
+                            <li>Letra minúscula</li>
+                            <li>Letra maiúscula</li>
+                            <li>Um número</li>
+                            <li>8 Caracteres</li>
+                        </ul>
+                    </ng-template>
+                </p-password>
+                <label for="password">Crie uma senha</label>
+            </span>
+            <span class="p-float-label">
+                <p-password [toggleMask]="true" [feedback]="false"/>
+                <label for="password">Confirme sua senha</label>
+            </span>
+            <span style="margin-bottom: 1.6rem; margin-top: 0" class="p-float-label p-input-icon-right">
+                <input class="ng-invalid" ng-dirty pInputText id="email" />
+                <label for="phone">E-mail para confirmação</label>
+                <i class="pi pi-envelope"></i>
+            </span>
+        </form>
+        <div style="text-align: center; display: flex; justify-content: space-evenly;" class="button">
+            <p-button (click)="routerLink('signup/personal-info')" icon="pi pi-arrow-left" iconPos="left" label="Voltar"></p-button>
+            <p-button (click)="routerLink('signup/confirmation')" icon="pi pi-arrow-right" iconPos="right" label="Próximo"></p-button>
+        </div>
+    </div>
+</div>
+
