--- a/SmartWalletFrontend/src/app/pages/signup/signup.component.html
+++ b/SmartWalletFrontend/src/app/pages/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="steps">
-    <p-steps [model]="items" [readonly]="false" [activeIndex]="activeIndex" (activeIndexChange)="onActiveIndexChange($event)"></p-steps>
+    <p-steps [model]="items" [readonly]="true" [activeIndex]="activeIndex" (activeIndexChange)="onActiveIndexChange($event)"></p-steps>
 </div>
 
 
