--- a/SmartWalletFrontend/src/app/pages/signup/create-password/create-password.component.html
+++ b/SmartWalletFrontend/src/app/pages/signup/create-password/create-password.component.html
@@ -6,9 +6,8 @@
     <div class="container card flex justify-content-center column">
         <h2 style="text-align: center;">Crie sua senha</h2>
         <p>Defina uma senha forte</p>
-        <form style="text-align: center;">
             <span class="p-float-label">
-                <p-password [weakLabel]="'Fraca'" [mediumLabel]="'Média'" [strongLabel]="'Forte'" [promptLabel]="'Digite sua senha'" [toggleMask]="true">
+                <p-password [(ngModel)]="userData.password" [weakLabel]="'Fraca'" [mediumLabel]="'Média'" [strongLabel]="'Forte'" [promptLabel]="'Digite sua senha'" [toggleMask]="true">
                     <ng-template pTemplate="header">
                         <h6>Crie sua senha</h6>
                     </ng-template>
@@ -25,19 +24,19 @@
                 </p-password>
                 <label for="password">Crie uma senha</label>
             </span>
-            <span class="p-float-label">
-                <p-password [toggleMask]="true" [feedback]="false"/>
-                <label for="password">Confirme sua senha</label>
+            <span style="margin-top: 0; margin-bottom: 1rem; text-align: left;">
+                <p-password placeholder="Confirme sua senha" (change)="verifyPwd()" id="pwdConfirmation" [(ngModel)]="passwordConfirmation" [toggleMask]="true" [feedback]="false"/>
+                
+                <small [ngStyle]="{color:'var(--red-600)'}" *ngIf="!passwordMatches" id="username-help" style="margin-left: .4rem;">* Senhas não conferem!</small>
             </span>
-            <span style="margin-bottom: 1.6rem; margin-top: 0" class="p-float-label p-input-icon-right">
-                <input class="ng-invalid" ng-dirty pInputText id="email" />
-                <label for="phone">E-mail para confirmação</label>
-                <i class="pi pi-envelope"></i>
+            <span style="margin-bottom: 1.6rem; margin-top: 1.5rem" class="p-float-label p-input-icon-right">
+                <input [(ngModel)]="userData.phonenumber" class="ng-invalid" ng-dirty pInputText id="email" />
+                <label for="phone">Telefone para confirmação</label>
+                <i class="pi pi-phone"></i>
             </span>
-        </form>
         <div style="text-align: center; display: flex; justify-content: space-evenly;" class="button">
-            <p-button (click)="routerLink('signup/personal-info')" icon="pi pi-arrow-left" iconPos="left" label="Voltar"></p-button>
-            <p-button (click)="routerLink('signup/confirmation')" icon="pi pi-arrow-right" iconPos="right" label="Próximo"></p-button>
+            <p-button [disabled]="loading" (click)="back()" [outlined]="true" icon="pi pi-arrow-left" iconPos="left" label="Voltar"></p-button>
+            <p-button [loading]="loading" (click)="routerLink('signup/confirmation')" icon="pi pi-arrow-right" iconPos="right" label="Próximo"></p-button>
         </div>
     </div>
 </div>
